src/prev23/phase/synan/PrevParser.java
// Generated from java-escape by ANTLR 4.11.1


	package prev23.phase.synan;
	
	import java.util.*;
	
	import prev23.common.report.*;
	import prev23.phase.lexan.*;
	
	import prev23.data.ast.tree.*;
	import prev23.data.ast.tree.decl.*;
	import prev23.data.ast.tree.expr.*;
	import prev23.data.ast.tree.stmt.*;
	import prev23.data.ast.tree.type.*;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PrevParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CONST_VOID=1, CONST_BOOL=2, CONST_INT=3, CONST_PTR=4, CONST_CHAR=5, CONST_STR=6, 
		KEY_BOOL=7, KEY_CHAR=8, KEY_DEL=9, KEY_DO=10, KEY_ELSE=11, KEY_FUN=12, 
		KEY_IF=13, KEY_IN=14, KEY_INT=15, KEY_LET=16, KEY_NEW=17, KEY_THEN=18, 
		KEY_TYP=19, KEY_VAR=20, KEY_VOID=21, KEY_WHILE=22, SYM_PARENTH_L=23, SYM_PARENTH_R=24, 
		SYM_CRBRACK_L=25, SYM_CRBRACK_R=26, SYM_SQBRACK_L=27, SYM_SQBRACK_R=28, 
		SYM_COMMA=29, SYM_DOT=30, SYM_COLON=31, SYM_SEMICOLON=32, SYM_AMPERS=33, 
		SYM_VPIPE=34, SYM_EXCLM=35, SYM_DBLEQ=36, SYM_NEQ=37, SYM_LT=38, SYM_GT=39, 
		SYM_LTE=40, SYM_GTE=41, SYM_AST=42, SYM_FSLASH=43, SYM_PRCNT=44, SYM_PLUS=45, 
		SYM_MINUS=46, SYM_CRCMFLX=47, SYM_EQ=48, ID=49, COMMENT=50, TAB=51, WS=52;
	public static final int
		RULE_source = 0, RULE_declarations = 1, RULE_type_declarations = 2, RULE_function_declarations = 3, 
		RULE_variable_declarations = 4, RULE_type = 5, RULE_expression = 6, RULE_statement = 7, 
		RULE_grp_op_unary = 8, RULE_op_postfix = 9, RULE_op_prefix = 10, RULE_op_mult = 11, 
		RULE_op_add = 12, RULE_op_rel = 13, RULE_op_conj = 14, RULE_op_disj = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "declarations", "type_declarations", "function_declarations", 
			"variable_declarations", "type", "expression", "statement", "grp_op_unary", 
			"op_postfix", "op_prefix", "op_mult", "op_add", "op_rel", "op_conj", 
			"op_disj"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'none'", null, null, "'nil'", null, null, "'bool'", "'char'", 
			"'del'", "'do'", "'else'", "'fun'", "'if'", "'in'", "'int'", "'let'", 
			"'new'", "'then'", "'typ'", "'var'", "'void'", "'while'", "'('", "')'", 
			"'{'", "'}'", "'['", "']'", "','", "'.'", "':'", "';'", "'&'", "'|'", 
			"'!'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'*'", "'/'", "'%'", 
			"'+'", "'-'", "'^'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CONST_VOID", "CONST_BOOL", "CONST_INT", "CONST_PTR", "CONST_CHAR", 
			"CONST_STR", "KEY_BOOL", "KEY_CHAR", "KEY_DEL", "KEY_DO", "KEY_ELSE", 
			"KEY_FUN", "KEY_IF", "KEY_IN", "KEY_INT", "KEY_LET", "KEY_NEW", "KEY_THEN", 
			"KEY_TYP", "KEY_VAR", "KEY_VOID", "KEY_WHILE", "SYM_PARENTH_L", "SYM_PARENTH_R", 
			"SYM_CRBRACK_L", "SYM_CRBRACK_R", "SYM_SQBRACK_L", "SYM_SQBRACK_R", "SYM_COMMA", 
			"SYM_DOT", "SYM_COLON", "SYM_SEMICOLON", "SYM_AMPERS", "SYM_VPIPE", "SYM_EXCLM", 
			"SYM_DBLEQ", "SYM_NEQ", "SYM_LT", "SYM_GT", "SYM_LTE", "SYM_GTE", "SYM_AST", 
			"SYM_FSLASH", "SYM_PRCNT", "SYM_PLUS", "SYM_MINUS", "SYM_CRCMFLX", "SYM_EQ", 
			"ID", "COMMENT", "TAB", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    public Location location(Token token) { 
			if(token != null) {
				return new Location((prev23.data.sym.Token) token); 
			}
			else {
				return new Location(0,0,0,0);
			}
		}

	    public Location location(Locatable locat) { 
			if(locat != null) {
				return new Location(locat); 
			}
			else {
				return new Location(0,0,0,0);
			}
		}

	    public Location location(Token token1, Token token2) { 
			return new Location((prev23.data.sym.Token) token1, (prev23.data.sym.Token) token2); 
		}
	    
		public Location location(Token token1, Locatable locat2) { 
			return new Location((prev23.data.sym.Token) token1, locat2); 
		}
	    
		public Location location(Locatable locat1, Token token2) { 
			return new Location(locat1, (prev23.data.sym.Token) token2); 
		}
	    
		public Location location(Locatable locat1, Locatable locat2) { 
			return new Location(locat1, locat2); 
		}	

	public PrevParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceContext extends ParserRuleContext {
		public AstTree ast;
		public DeclarationsContext declarations;
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PrevParser.EOF, 0); }
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			((SourceContext)_localctx).declarations = declarations();
			setState(33);
			match(EOF);

					((SourceContext)_localctx).ast = ((SourceContext)_localctx).declarations.ast;
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationsContext extends ParserRuleContext {
		public AstTrees<AstTrees<AstDecl>> ast;
		public Vector<AstTrees<AstDecl>> nodes = new Vector<>();
		public Type_declarationsContext type_declarations;
		public Function_declarationsContext function_declarations;
		public Variable_declarationsContext variable_declarations;
		public List<Type_declarationsContext> type_declarations() {
			return getRuleContexts(Type_declarationsContext.class);
		}
		public Type_declarationsContext type_declarations(int i) {
			return getRuleContext(Type_declarationsContext.class,i);
		}
		public List<Function_declarationsContext> function_declarations() {
			return getRuleContexts(Function_declarationsContext.class);
		}
		public Function_declarationsContext function_declarations(int i) {
			return getRuleContext(Function_declarationsContext.class,i);
		}
		public List<Variable_declarationsContext> variable_declarations() {
			return getRuleContexts(Variable_declarationsContext.class);
		}
		public Variable_declarationsContext variable_declarations(int i) {
			return getRuleContext(Variable_declarationsContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(45);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case KEY_TYP:
					{
					setState(36);
					((DeclarationsContext)_localctx).type_declarations = type_declarations();

						_localctx.nodes.add(((DeclarationsContext)_localctx).type_declarations.ast);

					}
					break;
				case KEY_FUN:
					{
					setState(39);
					((DeclarationsContext)_localctx).function_declarations = function_declarations();

						_localctx.nodes.add(((DeclarationsContext)_localctx).function_declarations.ast);

					}
					break;
				case KEY_VAR:
					{
					setState(42);
					((DeclarationsContext)_localctx).variable_declarations = variable_declarations();

						_localctx.nodes.add(((DeclarationsContext)_localctx).variable_declarations.ast);

					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(47); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 1576960L) != 0 );

				((DeclarationsContext)_localctx).ast = new AstTrees("Declarations",_localctx.nodes);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_declarationsContext extends ParserRuleContext {
		public AstTrees<AstDecl> ast;
		public Vector<AstDecl> nodes = new Vector<>();
		public Token id_0;
		public TypeContext tp_0;
		public Token id_1;
		public TypeContext tp_1;
		public TerminalNode KEY_TYP() { return getToken(PrevParser.KEY_TYP, 0); }
		public List<TerminalNode> SYM_EQ() { return getTokens(PrevParser.SYM_EQ); }
		public TerminalNode SYM_EQ(int i) {
			return getToken(PrevParser.SYM_EQ, i);
		}
		public TerminalNode SYM_SEMICOLON() { return getToken(PrevParser.SYM_SEMICOLON, 0); }
		public List<TerminalNode> ID() { return getTokens(PrevParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PrevParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> SYM_COMMA() { return getTokens(PrevParser.SYM_COMMA); }
		public TerminalNode SYM_COMMA(int i) {
			return getToken(PrevParser.SYM_COMMA, i);
		}
		public Type_declarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_declarations; }
	}

	public final Type_declarationsContext type_declarations() throws RecognitionException {
		Type_declarationsContext _localctx = new Type_declarationsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(KEY_TYP);
			setState(52);
			((Type_declarationsContext)_localctx).id_0 = match(ID);
			setState(53);
			match(SYM_EQ);
			setState(54);
			((Type_declarationsContext)_localctx).tp_0 = type();

				_localctx.nodes.add(new AstTypDecl(location(((Type_declarationsContext)_localctx).id_0,((Type_declarationsContext)_localctx).tp_0.ast), ((Type_declarationsContext)_localctx).id_0.getText(), ((Type_declarationsContext)_localctx).tp_0.ast));

			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SYM_COMMA) {
				{
				{
				setState(56);
				match(SYM_COMMA);
				setState(57);
				((Type_declarationsContext)_localctx).id_1 = match(ID);
				setState(58);
				match(SYM_EQ);
				setState(59);
				((Type_declarationsContext)_localctx).tp_1 = type();

					_localctx.nodes.add(new AstTypDecl(location(((Type_declarationsContext)_localctx).id_1,((Type_declarationsContext)_localctx).tp_1.ast), ((Type_declarationsContext)_localctx).id_1.getText(), ((Type_declarationsContext)_localctx).tp_1.ast));

				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			match(SYM_SEMICOLON);

				((Type_declarationsContext)_localctx).ast = new AstTrees("TypeDeclarations",_localctx.nodes);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_declarationsContext extends ParserRuleContext {
		public AstTrees<AstDecl> ast;
		public Vector<AstParDecl> pr_decls = new Vector<>();
		public Vector<AstDecl> nodes = new Vector<>();
		public AstStmt nullableStmt = null;
		public Token id_0;
		public Token id_1;
		public TypeContext tp_0;
		public Token id_2;
		public TypeContext tp_1;
		public TypeContext tp_2;
		public StatementContext st_0;
		public Token id_3;
		public Token id_4;
		public TypeContext tp_3;
		public Token id_5;
		public TypeContext tp_4;
		public TypeContext tp_5;
		public StatementContext st_1;
		public TerminalNode KEY_FUN() { return getToken(PrevParser.KEY_FUN, 0); }
		public List<TerminalNode> SYM_PARENTH_L() { return getTokens(PrevParser.SYM_PARENTH_L); }
		public TerminalNode SYM_PARENTH_L(int i) {
			return getToken(PrevParser.SYM_PARENTH_L, i);
		}
		public List<TerminalNode> SYM_PARENTH_R() { return getTokens(PrevParser.SYM_PARENTH_R); }
		public TerminalNode SYM_PARENTH_R(int i) {
			return getToken(PrevParser.SYM_PARENTH_R, i);
		}
		public List<TerminalNode> SYM_COLON() { return getTokens(PrevParser.SYM_COLON); }
		public TerminalNode SYM_COLON(int i) {
			return getToken(PrevParser.SYM_COLON, i);
		}
		public TerminalNode SYM_SEMICOLON() { return getToken(PrevParser.SYM_SEMICOLON, 0); }
		public List<TerminalNode> ID() { return getTokens(PrevParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PrevParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> SYM_EQ() { return getTokens(PrevParser.SYM_EQ); }
		public TerminalNode SYM_EQ(int i) {
			return getToken(PrevParser.SYM_EQ, i);
		}
		public List<TerminalNode> SYM_COMMA() { return getTokens(PrevParser.SYM_COMMA); }
		public TerminalNode SYM_COMMA(int i) {
			return getToken(PrevParser.SYM_COMMA, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Function_declarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declarations; }
	}

	public final Function_declarationsContext function_declarations() throws RecognitionException {
		Function_declarationsContext _localctx = new Function_declarationsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(KEY_FUN);
			setState(71);
			((Function_declarationsContext)_localctx).id_0 = match(ID);
			setState(72);
			match(SYM_PARENTH_L);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(73);
				((Function_declarationsContext)_localctx).id_1 = match(ID);
				setState(74);
				match(SYM_COLON);
				setState(75);
				((Function_declarationsContext)_localctx).tp_0 = type();

					_localctx.pr_decls.add(new AstParDecl(location(((Function_declarationsContext)_localctx).id_1,((Function_declarationsContext)_localctx).tp_0.ast),((Function_declarationsContext)_localctx).id_1.getText(),((Function_declarationsContext)_localctx).tp_0.ast));

				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SYM_COMMA) {
					{
					{
					setState(77);
					match(SYM_COMMA);
					setState(78);
					((Function_declarationsContext)_localctx).id_2 = match(ID);
					setState(79);
					match(SYM_COLON);
					setState(80);
					((Function_declarationsContext)_localctx).tp_1 = type();

						_localctx.pr_decls.add(new AstParDecl(location(((Function_declarationsContext)_localctx).id_2,((Function_declarationsContext)_localctx).tp_1.ast),((Function_declarationsContext)_localctx).id_2.getText(),((Function_declarationsContext)_localctx).tp_1.ast));	
